fixing mobile view sol 2

--- a/static/_work.scss
+++ b/static/_work.scss
@@ -24,6 +24,7 @@
     margin-bottom: 6rem;
     align-items: center;
     .content-container-left{
+      height: 100%;
       grid-row: 1/-1;
       grid-column: 1/2;
       display: flex;
@@ -55,6 +56,7 @@
 
   .content-container-right{
     grid-column: 2/-1;
+    height: 100%;
     grid-row: 1/-1;
       .content-container {
         display: grid;
@@ -193,8 +195,10 @@
 
 .content-container-main:nth-child(even) .content-container-left{
   grid-column: 12/-1;
+  height: 100%;
 }
 .content-container-main:nth-child(even) .content-container-right{
+  height: 100%;
   grid-column: 1/12; 
   .right{
     grid-column: 6 / -1;
