--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -117,6 +117,7 @@
         }
         .content-container-right {
             grid-column: 1/-1;
+            height: 100%;
             .content-container{
 
                 .right{
@@ -166,6 +167,7 @@
         display: none;
     }
     .content-container-main:nth-child(even) .content-container-right {
+        height: 100%;
         grid-column: 1/-1;
         .right {
             grid-column: 1 / -1;
@@ -223,6 +225,7 @@
 @media (min-width: 791px) and (max-width: 958px) {
     .content-container-main{
         .content-container-right{
+            height: 100%;
             .content-container {
                 display: grid;
                     .right {
