--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -118,6 +118,7 @@
         .content-container-right {
             grid-column: 1/-1;
             .content-container{
+
                 .right{
                     grid-column: 1/-1;
                     grid-row: 1/-1;
@@ -141,7 +142,7 @@
                 }
                 .left{
                     grid-column: 1/-1;
-                    // height: 100%;
+                    height: 100%;
                     // width: 100%;
                     img {
                         object-fit: cover;
