--- a/static/_work.scss
+++ b/static/_work.scss
@@ -1,8 +1,8 @@
-.work-title{
+.work-title {
   margin-bottom: 1rem;
-  color:#dadada;
+  color: #dadada;
 }
-.fa-github-alt{
+.fa-github-alt {
   @extend %work-hover;
   opacity: 1;
   transition: all 0.4s;
@@ -12,38 +12,38 @@
   color: #dadada;
 }
 
-.works-container-inner{
+.works-container-inner {
   margin-bottom: 10rem;
 }
-.content-container-main{
-    display: grid;
-    gap: 1rem;
-    grid-row-gap: 1rem;
-    grid-template-columns: repeat(12,1fr);
-    display: grid;
-    margin-bottom: 6rem;
-    align-items: center;
-    .content-container-left{
-      grid-row: 1/-1;
-      grid-column: 1/2;
+.content-container-main {
+  display: grid;
+  gap: 1rem;
+  grid-row-gap: 1rem;
+  grid-template-columns: repeat(12, 1fr);
+  display: grid;
+  margin-bottom: 6rem;
+  align-items: center;
+  .content-container-left {
+    grid-row: 1/-1;
+    grid-column: 1/2;
+    display: flex;
+    justify-content: center;
+    ul.tech-skill-imgs {
       display: flex;
-      justify-content: center;
-      ul.tech-skill-imgs {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        min-height: 250px;
-        li {
-          @extend %hover-work-Tools-left;
-          @extend %Tools-work-postion-left;
-          border: 2px solid rgba(80, 80, 80, 0.317);
-          list-style-type: none;
-          background-color: rgba(80, 80, 80, 0.317);
-          display: inline-block;
-          border-radius: 10px;
+      flex-direction: column;
+      justify-content: space-around;
+      min-height: 250px;
+      li {
+        @extend %hover-work-Tools-left;
+        @extend %Tools-work-postion-left;
+        border: 2px solid rgba(80, 80, 80, 0.317);
+        list-style-type: none;
+        background-color: rgba(80, 80, 80, 0.317);
+        display: inline-block;
+        border-radius: 10px;
 
-          box-shadow: 0 15px 35px rgba(207, 207, 218, 0.009),
-            0 5px 15px rgba(0, 0, 0, 0.913) !important;
+        box-shadow: 0 15px 35px rgba(207, 207, 218, 0.009),
+          0 5px 15px rgba(0, 0, 0, 0.913) !important;
         img {
           width: 20px;
           height: 20px;
@@ -53,33 +53,34 @@
     }
   }
 
-  .content-container-right{
+  .content-container-right {
     grid-column: 2/-1;
     grid-row: 1/-1;
-      .content-container {
-        display: grid;
-        grid-template-columns: repeat(12, 1fr);
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        // align-items: center;
-        .right {
-          position: relative;
-          grid-column: 1 / 8;
-          grid-row: 1 / -1;
-          z-index: 1;
-          min-height: 250px;
-          .content {
-            display: flex;
-            min-height: inherit;
-            flex-direction: column;
-            justify-content: space-between;
-            .p-label {
-              color: orange;
-            }
-            .p-title {
-              font-size: 1.2rem;
-              color: #dcdcdc;
-            }
+    .content-container {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: repeat(1, 1fr);
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      .right {
+        position: relative;
+        grid-column: 1 / 8;
+        grid-row: 1 / -1;
+        z-index: 1;
+        min-height: 250px;
+        .content {
+          display: flex;
+          min-height: inherit;
+          flex-direction: column;
+          justify-content: space-between;
+          .p-label {
+            color: orange;
+          }
+          .p-title {
+            font-size: 1.2rem;
+            color: #dcdcdc;
+          }
           .p-details {
             line-height: 1.5;
             color: #a8b2d1;
@@ -91,7 +92,7 @@
               margin: 0.5rem 0;
               color: rgb(182, 182, 182);
             }
-            .preview-vid {           
+            .preview-vid {
               box-sizing: border-box;
               padding: 1rem;
               .preview-btn {
@@ -114,14 +115,14 @@
           }
         }
       }
-    
+
       .left {
         position: relative;
         border-radius: 2px;
         grid-column: 6 / -1;
         transition: all 0.5s;
-        grid-row: 1 / -1;       
-     
+        grid-row: 1 / -1;
+
         img {
           width: 100%;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
@@ -132,14 +133,14 @@
           // mix-blend-mode: multiply;
           transition: all 0.5s;
         }
-//         .pss{
-//           mix-blend-mode: multiply; 
-//           filter: grayscale(100%) contrast(1) brightness(90%);
-//           width: 100%;
-// max-width: 100%;
-// vertical-align: middle;
+        //         .pss{
+        //           mix-blend-mode: multiply;
+        //           filter: grayscale(100%) contrast(1) brightness(90%);
+        //           width: 100%;
+        // max-width: 100%;
+        // vertical-align: middle;
 
-//         }
+        //         }
       }
     }
   }
@@ -191,29 +192,28 @@
   }
 }
 
-.content-container-main:nth-child(even) .content-container-left{
+.content-container-main:nth-child(even) .content-container-left {
   grid-column: 12/-1;
 }
-.content-container-main:nth-child(even) .content-container-right{
-  grid-column: 1/12; 
-  .right{
+.content-container-main:nth-child(even) .content-container-right {
+  grid-column: 1/12;
+  .right {
     grid-column: 6 / -1;
-    .content{
+    .content {
       align-items: flex-end;
-      .p-details{
+      .p-details {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
       }
     }
   }
-  .left{
+  .left {
     grid-column: 1 / 8;
   }
 }
 
-
-.lock-screen{
+.lock-screen {
   overflow: hidden;
 }
 
