--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -100,15 +100,15 @@
 
 @media (min-width:0px )and (max-width: 790px){
 
-    .skills{
-        flex-direction: column;
-        align-items: center;
-        .skills-r {
-            img{
-                max-width: 500px;
-            }
-        }
-    }
+    // .skills{
+    //     flex-direction: column;
+    //     align-items: center;
+    //     .skills-r {
+    //         img{
+    //             max-width: 500px;
+    //         }
+    //     }
+    // }
     .content-container-main{
         display: grid;
         .content-container-left {
@@ -154,43 +154,83 @@
                         vertical-align: middle;
                     }
                 }
-                // .left:hover:before {
-                //     background-color: rgba(60, 58, 58, 0.845);
-                // }
             }
         }
     }
 
-    .content-container-main:nth-child(even) .content-container-left {
-        grid-column: 1/-1;
-        display: none;
-    }
-    .content-container-main:nth-child(even) .content-container-right {
-        grid-column: 1/-1;
-        .right {
-            grid-column: 1 / -1;
-            .content {
-                align-self: flex-start;
-                .p-details {
-                    display: flex;
-                    flex-direction: column;
-                    align-self: flex-start;
-                }
-            }
-        }   
-        .left {
-            grid-column: 1 / -1;
-            height: 100%;
-            width: 100%;
-                img {
-                object-fit: cover;
-                width: 100%;
-                height: 100%;
-                max-width: 100%;
-                vertical-align: middle;
-            }
+    // .content-container-main:nth-child(even) .content-container-left {
+    //     grid-column: 1/-1;
+    //     display: none;
+    // }
+    // .content-container-main:nth-child(even) .content-container-right {
+    //     grid-column: 1/-1;
+    //     .right {
+    //         grid-column: 1 / -1;
+    //         .content {
+    //             align-self: flex-start;
+    //             .p-details {
+    //                 display: flex;
+    //                 flex-direction: column;
+    //                 align-self: flex-start;
+    //             }
+    //         }
+    //     }   
+    //     .left {
+    //         grid-column: 1 / -1;
+    //         height: 100%;
+    //         width: 100%;
+    //             img {
+    //             object-fit: cover;
+    //             width: 100%;
+    //             height: 100%;
+    //             max-width: 100%;
+    //             vertical-align: middle;
+    //         }
 
-        }
+        // }
+        @media (max-width: 767px) {
+  .content-container-main:nth-child(even) .content-container-right .right {
+    padding: 25px 25px 20px;
+  }
+
+  .content-container-main .content-container-right .left {
+    opacity: 0.25;
+  }
+
+  .content-container-main {
+    margin-bottom: 30px;
+    display: block;
+  }
+
+  .content-container-main
+    .content-container-right
+    .content-container
+    .right
+    .content
+    .p-details
+    .preview-vid {
+    padding: 15px 0;
+  }
+
+  .content-container-main .content-container-right .content-container .right {
+    min-height: unset;
+    padding: 25px;
+  }
+
+  .content-container-main .content-container-right .content-container {
+    position: relative;
+    display: block;
+  }
+
+  .content-container-main .content-container-right .content-container .left {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
     }
    .checkbtn {
         display: block;
@@ -356,59 +396,5 @@
         display: none;
     }
 }
-@media (min-width: 1200px) {
-  main {
-    .main-bio {
-        .content-btn {
-            width: 260px;
-            @include dir-col-center;
-            align-items: center;
-            gap: 1rem;
-            padding: 0 0 0 6em;
-            }
-        }
-    }
-}
 
-@media (max-width: 767px) {
-  .content-container-main:nth-child(even) .content-container-right .right {
-    padding: 25px 25px 20px;
-  }
 
-  .content-container-main .content-container-right .left {
-    opacity: 0.25;
-  }
-
-  .content-container-main {
-    margin-bottom: 30px;
-    display: block;
-  }
-
-  .content-container-main
-    .content-container-right
-    .content-container
-    .right
-    .content
-    .p-details
-    .preview-vid {
-    padding: 15px 0;
-  }
-
-  .content-container-main .content-container-right .content-container .right {
-    min-height: unset;
-    padding: 25px;
-  }
-
-  .content-container-main .content-container-right .content-container {
-    position: relative;
-    display: block;
-  }
-
-  .content-container-main .content-container-right .content-container .left {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
