--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -100,15 +100,15 @@
 
 @media (min-width:0px )and (max-width: 790px){
 
-    // .skills{
-    //     flex-direction: column;
-    //     align-items: center;
-    //     .skills-r {
-    //         img{
-    //             max-width: 500px;
-    //         }
-    //     }
-    // }
+    .skills{
+        flex-direction: column;
+        align-items: center;
+        .skills-r {
+            img{
+                max-width: 500px;
+            }
+        }
+    }
     .content-container-main{
         display: grid;
         .content-container-left {
