--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -15,6 +15,9 @@
   transition: left 0.1s;
 }
 @media (max-width: 380px) {
+    .outer-wrap-main{
+        padding: 1rem;
+    }
     .work-container-inner {
         .work-title {
             font-size: 19px;
