fixing mobile view sol 11

--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -16,7 +16,7 @@
 }
 @media (max-width: 380px) {
     .outer-wrap-main{
-        padding: 1rem;
+        padding: 2rem 1rem;
     }
     .work-container-inner {
         .work-title {
