fixed online smpt

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -117,6 +117,7 @@
                             <li>NODE.JS</li>
                             <li>POSTGRES</li>
                             <li>DJANGO</li>
+                            <li>API</li>
                         </ul>
                     </div>
                     <div class='skills-r'>
@@ -325,7 +326,7 @@
                                     <button class='btn-submit' type="submit" id='content-send'>Send</button>
                                 </form>
                                 <div class="contact-msg-sucess">
-                                    <h5>Your message was sent successfully. Thanks!</h5>
+                                    <h5>Message sent successfully. Thanks!</h5>
                                     <i class="fas fa-times fa-lg"></i>
                                 </div>
                             </div>
