delted large files

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -8,7 +8,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href='{% static "style.css" %}' rel="stylesheet" type="text/css" />
-
     <title>Ganiyu</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
@@ -37,7 +36,6 @@
                 </div>
             </div>
         </div>
-
         <div class="outer-wrap-main">
             <div class="nav-open"></div>
             <header class="site-header">
@@ -73,7 +71,6 @@
                 </nav>
             </header>
             <!-- .site-header -->
-
             <section class="content-area">
                 <main class="main-content-area" id="about-page">
                     <div class="main-bio">
@@ -90,7 +87,6 @@
                         </div>
                     </div>
                 </main>
-
                 <section class="skills">
                     <div class='skills-l'>
                         <h2>About Me</h2>
@@ -144,10 +140,9 @@
                                             <h4 class='p-title'>CyberBullying Dectection</h4>
                                             <div class='p-details'>
                                                 <p class="p-info">
-                                                    A nicer look at your GitHub profile and repository stats with data
-                                                    visualizations of
-                                                    your top languages and stars. Sort
-                                                    through your top repos by number of stars, forks
+                                                    Comparing three traditional machine algorithms in classification of
+                                                    tweeter tweets to
+                                                    determine the kinds of language that contain bullying connotation.
                                                 </p>
                                                 <div class="preview-vid">
 
@@ -155,14 +150,12 @@
                                                         <h5 href="" class="watch">Preview</h5>
                                                     </div>
                                                 </div>
-
                                                 <div class="content-icons">
                                                     <a target='_blank'
-                                                        href="https://github.com/GaniyuRem/Cyberbullying_dection"><i
+                                                        href="https://github.com/GaniyuRem/Cyberbullying_dectection"><i
                                                             class="fab fa-github-alt fa-lg"></i></a>
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="left">
@@ -170,25 +163,20 @@
                                     </div>
                                 </div>
                                 <div class="video-open"></div>
-
                             </div>
                             <div class="vid-container">
                                 <div class="vid-inner">
-                                    <video class src="{% static 'portfolio_app/video/racevideo.mp4' %}"
+                                    <video class src="{% static 'portfolio_app/video/bullying.mp4' %}"
                                         autoplay="autoplay" loop muted type='video/mp4' controls preload="auto"></video>
                                 </div>
                             </div>
                         </div>
-
-
-
                         <!-- ONE IS FINISHED HERE -->
                         <div class="content-container-main">
                             <div class="content-container-left">
                                 <ul class="tech-skill-imgs">
                                     <li><img src="{% static 'portfolio_app/img/python.png' %}" alt=""></li>
                                     <li><img src="{% static 'portfolio_app/img/js.png' %}" alt="" /></li>
-                                    <li><img src="{% static 'portfolio_app/img/twitter_api.png' %}" alt="" /></li>
                                 </ul>
                             </div>
                             <div class='content-container-right'>
@@ -199,25 +187,20 @@
                                             <h4 class='p-title'>Dome Three.js</h4>
                                             <div class='p-details'>
                                                 <p class="p-info">
-                                                    A nicer look at your GitHub profile and repository stats with data
-                                                    visualizations of
-                                                    your top languages and stars. Sort
-                                                    through your top repos by number of stars, forks
+                                                    A simple car game built around the city dome developed using
+                                                    three.js webgl library.
                                                 </p>
                                                 <div class="preview-vid">
-
                                                     <div class='preview-btn'>
                                                         <h5 href="" class="watch">Preview</h5>
                                                     </div>
                                                 </div>
-
                                                 <div class="content-icons">
                                                     <a target='_blank'
                                                         href="https://github.com/GaniyuRem/Cyberbullying_dection"><i
                                                             class="fab fa-github-alt fa-lg"></i></a>
                                                 </div>
                                             </div>
-
                                         </div>
                                     </div>
                                     <div class="left">
@@ -225,7 +208,6 @@
                                     </div>
                                 </div>
                                 <div class="video-open"></div>
-
                             </div>
                             <div class="vid-container">
                                 <div class="vid-inner">
@@ -238,8 +220,6 @@
                             <div class="content-container-left">
                                 <ul class="tech-skill-imgs">
                                     <li><img src="{% static 'portfolio_app/img/python.png' %}" alt=""></li>
-                                    <li><img src="{% static 'portfolio_app/img/js.png' %}" alt="" /></li>
-                                    <li><img src="{% static 'portfolio_app/img/twitter_api.png' %}" alt="" /></li>
                                 </ul>
                             </div>
                             <div class='content-container-right'>
@@ -250,7 +230,8 @@
                                             <h4 class='p-title'>Space Invader</h4>
                                             <div class='p-details'>
                                                 <p class="p-info">
-                                                    A Simple two player Arcade space invader built with python pygame.
+                                                    A Simple two player Arcade space invader built with python pygame
+                                                    module.
                                                 </p>
                                                 <div class="preview-vid">
 
