edited vid file

--- a/static/_content_area.scss
+++ b/static/_content_area.scss
@@ -46,7 +46,7 @@ main {
                 margin: 0;
                 width: 100px;
                 &::before{
-                    background: url('portfolio_app/img/v1.gif') left center no-repeat;
+                    background: url('portfolio_app/img/download.gif') left center no-repeat;
                     vertical-align: middle;
                     background-size: 24px auto;
                     width: 30px;
