--- a/static/_mobile.scss
+++ b/static/_mobile.scss
@@ -146,12 +146,12 @@
                 .left{
                     grid-column: 1/-1;
                     height: 100%;
+                    opacity: 0.25;
                     img {
                         object-fit: cover;
                         overflow: hidden;
                         width: 100%;
                         height: 100%;
-                        color:pink;
                         max-width: 100%;
                         vertical-align: middle;
                     }
@@ -339,6 +339,7 @@
         background-color: black;
         left: -600%;
         z-index: 1;
+        padding: 2rem 2rem;
     }
     .name-side-l {
         display: block;
