--- a/static/_work.scss
+++ b/static/_work.scss
@@ -32,7 +32,7 @@
     ul.tech-skill-imgs {
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: space-evenly;
       min-height: 250px;
       li {
         @extend %hover-work-Tools-left;
@@ -53,7 +53,6 @@
       }
     }
   }
-
   .content-container-right {
     grid-column: 2/-1;
     grid-row: 1/-1;
@@ -116,32 +115,23 @@
           }
         }
       }
-
       .left {
         position: relative;
         border-radius: 2px;
         grid-column: 6 / -1;
         transition: all 0.5s;
         grid-row: 1 / -1;
-
+        opacity: 0.3;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
         img {
           width: 100%;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
             rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
           background-color: #64ffda;
-          // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
           vertical-align: middle;
-          // mix-blend-mode: multiply;
           transition: all 0.5s;
         }
-        //         .pss{
-        //           mix-blend-mode: multiply;
-        //           filter: grayscale(100%) contrast(1) brightness(90%);
-        //           width: 100%;
-        // max-width: 100%;
-        // vertical-align: middle;
-
-        //         }
       }
     }
   }
