--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href='{% static "style.css" %}' rel="stylesheet" type="text/css" />
-    <link rel="shortcut icon" type="image/jpg" href='{% static "portfolio_app/img/favicon.png" %}'' />
+    <link rel="shortcut icon" type="image/jpg" href='{% static "portfolio_app/img/fav.png" %}'' />
     <title>Ganiyu</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
