--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -30,9 +30,7 @@
         <div class='out-side-logo'>
             <a target="_blank" href="https://linkedin.com/in/kola-odunaiya-81a74ba2"><i
                     class="fab fa-linkedin-in fa-lg"></i></a>
-            <a target='_blank' href="https://github.com/GaniyuRem/Cyberbullying_dection"><i
-                    class="fab fa-github fa-lg"></i></a>
-
+            <a target='_blank' href="href=https://github.com/GaniyuRem"><i class="fab fa-github fa-lg"></i></a>
             <img src="{% static 'portfolio_app/img/weblogo.png' %}" alt="">
         </div>
     </div>
@@ -92,8 +90,8 @@
                 <div class='skills-l'>
                     <h2>About Me</h2>
                     <p>
-                        My name is Ganiyu Odunaiya and I'm a passionate Frontend Web Developer using web
-                        technologies
+                        My name is Ganiyu Odunaiya and I'm a passionate Developer using web
+                        and software development technologies
                         to
                         build amazing products
                         and focusing on solving problems for different niches and different industries using the
@@ -142,7 +140,7 @@
                                         <div class='p-details'>
                                             <p class="p-info">
                                                 Comparing three traditional machine algorithms in classification of
-                                                tweeter tweets to
+                                                tweeter tweets, fetched using tweepy modules in order to
                                                 determine the kinds of language that contain bullying connotation.
                                             </p>
                                             <div class="preview-vid">
@@ -160,7 +158,7 @@
                                     </div>
                                 </div>
                                 <div class="left">
-                                    <img src="{% static 'portfolio_app/img/we.png' %}" alt="" />
+                                    <img src="{% static 'portfolio_app/img/bullyingd.jpeg' %}" alt="" />
                                 </div>
                             </div>
                             <div class="video-open"></div>
@@ -205,7 +203,7 @@
                                     </div>
                                 </div>
                                 <div class="left">
-                                    <img src="{% static 'portfolio_app/img/we.png' %}" alt="" />
+                                    <img src="{% static 'portfolio_app/img/e1.png' %}" alt="" />
                                 </div>
                             </div>
                             <div class="video-open"></div>
@@ -232,7 +230,7 @@
                                         <div class='p-details'>
                                             <p class="p-info">
                                                 A Simple two player Arcade space invader built with python pygame
-                                                module.
+                                                module and OOP principles.
                                             </p>
                                             <div class="preview-vid">
 
@@ -249,7 +247,7 @@
                                     </div>
                                 </div>
                                 <div class="left">
-                                    <img src="{% static 'portfolio_app/img/we.png' %}" alt="" />
+                                    <img class='cs' src="{% static 'portfolio_app/img/hsw.jpeg' %}" alt="" />
                                 </div>
                             </div>
                             <div class="video-open"></div>
