--- a/static/_work.scss
+++ b/static/_work.scss
@@ -124,11 +124,14 @@
         opacity: 0.3;
         box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
       rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      &:hover{
+        opacity: 1;
+      }
         img {
           width: 100%;
           box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
             rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-          background-color: #64ffda;
+          background-color: #101010;
           vertical-align: middle;
           transition: all 0.5s;
         }
