deleted unwated files

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -30,7 +30,7 @@
         <div class='out-side-logo'>
             <a target="_blank" href="https://linkedin.com/in/kola-odunaiya-81a74ba2"><i
                     class="fab fa-linkedin-in fa-lg"></i></a>
-            <a target='_blank' href="href=https://github.com/GaniyuRem"><i class="fab fa-github fa-lg"></i></a>
+            <a target='_blank' href="https://github.com/GaniyuRem"><i class="fab fa-github fa-lg"></i></a>
             <img src="{% static 'portfolio_app/img/weblogo.png' %}" alt="">
         </div>
     </div>
@@ -170,7 +170,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- ONE IS FINISHED HERE -->
                     <div class="content-container-main">
                         <div class="content-container-left">
                             <ul class="tech-skill-imgs">
@@ -203,7 +202,7 @@
                                     </div>
                                 </div>
                                 <div class="left">
-                                    <img src="{% static 'portfolio_app/img/e1.png' %}" alt="" />
+                                    <img src="{% static 'portfolio_app/img/domecity.png' %}" alt="" />
                                 </div>
                             </div>
                             <div class="video-open"></div>
@@ -247,7 +246,7 @@
                                     </div>
                                 </div>
                                 <div class="left">
-                                    <img class='cs' src="{% static 'portfolio_app/img/hsw.jpeg' %}" alt="" />
+                                    <img class='cs' src="{% static 'portfolio_app/img/s_planes.jpeg' %}" alt="" />
                                 </div>
                             </div>
                             <div class="video-open"></div>
