adjusting mobile load static 1

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -165,7 +165,7 @@
                         </div>
                         <div class="vid-container">
                             <div class="vid-inner">
-                                <video playsinline autoplay loop muted
+                                <video playsinline autoplay loop muted controls
                                     src="{% static 'portfolio_app/video/bullying.mp4' %}"></video>
                             </div>
                         </div>
@@ -209,7 +209,7 @@
                         </div>
                         <div class="vid-container">
                             <div class="vid-inner">
-                                <video playsinline autoplay loop muted
+                                <video playsinline autoplay loop muted controls
                                     src="{% static 'portfolio_app/video/threejs.mp4' %}" type='video/mp4'></video>
                             </div>
                         </div>
@@ -253,7 +253,7 @@
                         </div>
                         <div class="vid-container">
                             <div class="vid-inner">
-                                <video playsinline autoplay loop muted
+                                <video playsinline autoplay loop muted controls
                                     src="{% static 'portfolio_app/video/space.mp4' %}">
                                 </video>
                             </div>
