--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -28,7 +28,7 @@
             <li><a href=' #contact-page'>contact.</a></li>
         </div>
         <div class='out-side-logo'>
-            <a target="_blank" href="https://linkedin.com/in/kola-odunaiya-81a74ba2"><i
+            <a target="_blank" href="https://www.linkedin.com/in/ganiyu-k-odunaiya-81a74ba2/"><i
                     class="fab fa-linkedin-in fa-lg"></i></a>
             <a target='_blank' href="https://github.com/GaniyuRem"><i class="fab fa-github fa-lg"></i></a>
             <img src="{% static 'portfolio_app/img/weblogo.png' %}" alt="">
@@ -274,7 +274,7 @@
                                 <div>
                                     <h4>LinkedIn</h4>
                                     <h6><a target="_blank"
-                                            href="https://linkedin.com/in/kola-odunaiya-81a74ba2">/Ganiyu</a>
+                                            href="https://www.linkedin.com/in/ganiyu-k-odunaiya-81a74ba2/">/Ganiyu</a>
                                     </h6>
                                 </div>
                             </div>
