updated the status of cyberbullying

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -139,9 +139,11 @@
                                         <h4 class='p-title'>CyberBullying Dectection</h4>
                                         <div class='p-details'>
                                             <p class="p-info">
-                                                Comparing three traditional machine algorithms in classification of
-                                                tweeter tweets, fetched using tweepy modules in order to
-                                                determine the kinds of language that contain bullying connotation.
+                                                A Model Training To Cyberbullying Detection With Classification
+                                                Techniques Of Data Mining
+                                                Comparing NB, SVM and Logistic regression algorithms to which TFIDF and
+                                                consine similiarty is used for feature extraction and SVM as binary
+                                                classifier.
                                             </p>
                                             <div class="preview-vid">
 
