--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -143,7 +143,7 @@
                                                 Techniques Of Data Mining
                                                 Comparing NB, SVM and Logistic regression algorithms to which TFIDF and
                                                 consine similiarty is used for feature extraction and SVM as binary
-                                                classifier.
+                                                classifier for best performance.
                                             </p>
                                             <div class="preview-vid">
 
