--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -294,7 +294,7 @@
                             <form class="contacts" id="content-email">
                                 {% csrf_token %}
                                 <label for="name">Name</label>
-                                <input required id='name' type="text" placeholder="e.g. Kimberely">
+                                <input required id='name' type="text" placeholder="e.g. Kimberley">
                                 <label for="email">Email</label>
                                 <input required id='email' type="text" placeholder="e.g. kim@gmail.com">
                                 <label for="email">Subject</label>
